# lfortran

./: CMakeLists.txt
src/lfortran/parser/: preprocessor.re
src/lfortran/semantics/: ast_body_visitor.cpp  ast_common_visitor.h  ast_symboltable_visitor.cpp
src/libasr/: asr_utils.cpp  asr_utils.h  config.h.in  utils.h
src/libasr/pass/: pass_utils.cpp
src/runtime/legacy/: CMakeLists.txt  lfortran_intrinsics.c
